# habitattakehome

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  NOTES.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: init-test-db.sql
sources/: neso_dfr_results.yaml  neso_second_dataset.yaml
sql/: schema.sql
sql/transforms/: 001_clean_strings.sql  002_dim_unit.sql  003_fact_auction_result.sql
src/habitat_pipeline/: __init__.py  cli.py  config.py  logging.py
src/habitat_pipeline/extract/: __init__.py  runner.py
src/habitat_pipeline/load/: __init__.py  db.py  runner.py
src/habitat_pipeline/observability/: __init__.py  metrics.py
src/habitat_pipeline/sources/: __init__.py  base.py  ckan.py  registry.py  rest.py
src/habitat_pipeline/transform/: __init__.py  runner.py
src/habitat_pipeline/validate/: __init__.py  models.py  runner.py
tests/: conftest.py  test_ckan_pagination.py  test_schema_smoke.py  test_upsert_idempotency.py  test_validation.py
tests/fixtures/: sample_records.json
