[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "habitat-pipeline"
version = "0.1.0"
description = "Data pipeline for NESO DFR auction results into Postgres."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ethan McDonald" }]
license = { text = "Proprietary" }

dependencies = [
    "httpx>=0.27,<0.29",
    "tenacity>=8.2,<10.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "PyYAML>=6.0,<7.0",
    "typer>=0.12,<0.16",
    "structlog>=24.1,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "respx>=0.22,<0.24",
    "ruff>=0.6,<0.10",
    "mypy>=1.10,<2.0",
    "types-PyYAML>=6.0,<7.0",
]

[project.scripts]
habitat-pipeline = "habitat_pipeline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/habitat_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line-too-long; ruff format handles it
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # assert False is fine in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
files = ["src/habitat_pipeline"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
markers = [
    "db: tests that require a live Postgres (skipped when DATABASE_URL is unset)",
]
